old/k8s/overlays/staging/patch-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics
spec:
  template:
    spec:
      containers:
        - name: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilitysoft
spec:
  template:
    spec:
      containers:
        - name: mobilitysoft
